Fix footer on mobile

--- a/themes/slop99/assets/scss/base.scss
+++ b/themes/slop99/assets/scss/base.scss
@@ -366,9 +366,10 @@ aside {
 
 footer {
     width: 100%;
+    max-width: 100vw;
     text-align: center;
     /* border-top: 2px groove $white; */
-    padding: 10px;
+    padding: 10px 0;
     font-size: 0.8em;
     background-color: $grey;
     color: $black;
